--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Conor's Favorite Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
